[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
version = "0.1.0"
description = "Ranked, token-budget-aware code context for LLMs and AI agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tarun M S"}]
readme = "README.md"
keywords = ["llm", "ai", "code", "context", "tree-sitter", "agents", "codegraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.2",
    "networkx>=3.0",
    "tiktoken>=0.5",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
codegraph = "codegraph.cli:main"

[tool.setuptools.packages.find]
include = ["codegraph*"]

[tool.setuptools.package-data]
codegraph = ["queries/*.scm", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
exclude = ["tests/fixtures/edge_cases/syntax_error.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore = ["tests/fixtures"]
